// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagDropdownItem renders as expected with a lupe icon 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--has-left-icon lab-tag--pale"
  disabled={false}
  id="option1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex={0}
  type="button"
  value="option1"
>
  <span
    className="lab-icon lab-icon--lupe lab-icon--black-75 lab-tag--left-icon"
  >
    <svg
      aria-hidden={true}
      className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
      fill="currentColor"
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.5 3a5.5 5.5 0 0 1 4.23 9.02l4.12 4.13a.5.5 0 0 1-.63.76l-.07-.06-4.13-4.12A5.5 5.5 0 1 1 8.5 3Zm0 1a4.5 4.5 0 1 0 0 9 4.5 4.5 0 0 0 0-9Z"
        fill="currentColor"
      />
    </svg>
  </span>
  Test render TagDropdownItem with lupe icon
</button>
`;

exports[`TagDropdownItem renders as expected with a purple color 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--purple-pale"
  disabled={false}
  id="option1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex={0}
  type="button"
  value="option1"
>
  Test render purple TagDropdownItem
</button>
`;

exports[`TagDropdownItem renders as expected with a thumb 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--has-thumb lab-tag--pale"
  disabled={false}
  id="option1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex={0}
  type="button"
  value="option1"
>
  <img
    alt="fake-thumb-alt"
    className="lab-tag__thumb"
    src="fake-thumb"
  />
  Test render TagDropdownItem with thumb
</button>
`;

exports[`TagDropdownItem renders as expected with a vivid skin 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--vivid"
  disabled={false}
  id="option1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex={0}
  type="button"
  value="option1"
>
  Test render vivid TagDropdownItem
</button>
`;

exports[`TagDropdownItem renders as expected with outline as true 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--outline lab-tag--pale"
  disabled={false}
  id="option1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex={0}
  type="button"
  value="option1"
>
  Test render outline TagDropdownItem
</button>
`;

exports[`TagDropdownItem renders with base props 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--pale"
  disabled={false}
  id="option1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex={0}
  type="button"
  value="option1"
>
  Test render TagDropdownItem
</button>
`;
